--- a/website/backend/reports/reportePerfilesUsuario.jrxml
+++ b/website/backend/reports/reportePerfilesUsuario.jrxml
@@ -10,11 +10,11 @@
 	usuario.email,
 	usuario.telefono,
 	perfil_medico.uid,
-	COALESCE(perfil_medico.nombres || ' '|| perfil_medico.apellidos, 'Sin completar') AS nombres,
-	COALESCE(date_part( 'year', age( perfil_medico.fecha_nacimiento ) ) || 'años', 'Sin completar') AS edad,
-	COALESCE(pais.nombre, 'Sin completar') AS pais,
-	COALESCE(pais_estado.nombre, 'Sin completar') AS estado, 
-	COALESCE(perfil_medico.ciudad, 'Sin completar') AS ciudad,
+	COALESCE(perfil_medico.nombres || ' '|| perfil_medico.apellidos, 'Not completed') AS nombres,
+	COALESCE(date_part( 'year', age( perfil_medico.fecha_nacimiento ) ) || ' ' || 'years', 'Not completed') AS edad,
+	COALESCE(pais.nombre, 'Not completed') AS pais,
+	COALESCE(pais_estado.nombre,'Not completed') AS estado, 
+	COALESCE(perfil_medico.ciudad, 'Not completed') AS ciudad,
 	perfil_medico.fecha_creacion as fecha_creacion
 FROM
 	perfil_medico
@@ -79,7 +79,7 @@ ORDER BY
 				<textElement>
 					<font fontName="DejaVu Sans" size="18"/>
 				</textElement>
-				<text><![CDATA[Reporte de perfiles por usuario]]></text>
+				<text><![CDATA[Report of profiles per user]]></text>
 			</staticText>
 			<textField pattern="MMMM d, yyyy h:mm:ss a">
 				<reportElement x="360" y="54" width="190" height="16" uuid="4909cabd-03b0-4756-b3ec-6876d4755df4"/>
@@ -88,17 +88,8 @@ ORDER BY
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="360" y="70" width="85" height="14" uuid="af2a10d6-323f-48a7-ba8f-c240ec2e8da1">
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-				</reportElement>
-				<textElement>
-					<font fontName="DejaVu Sans" size="10"/>
-				</textElement>
-				<text><![CDATA[Usuario creador: ]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="445" y="70" width="118" height="14" uuid="72e4486d-980b-4ba0-b84c-450bbcb01f33"/>
+				<reportElement x="430" y="70" width="120" height="14" uuid="72e4486d-980b-4ba0-b84c-450bbcb01f33"/>
 				<textElement>
 					<font fontName="DejaVu Sans"/>
 				</textElement>
@@ -121,6 +112,15 @@ ORDER BY
 				</reportElement>
 				<imageExpression><![CDATA["https://drive.google.com/uc?export=view&id=16Ck7Iixprqcu5BLetkjznt50OiGd9723"]]></imageExpression>
 			</image>
+			<staticText>
+				<reportElement x="361" y="70" width="69" height="14" uuid="56e88500-71ac-4ff0-a017-2e540ef1f841">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
+				<textElement>
+					<font fontName="DejaVu Sans" size="10"/>
+				</textElement>
+				<text><![CDATA[Creator user:]]></text>
+			</staticText>
 		</band>
 	</title>
 	<columnHeader>
@@ -132,17 +132,17 @@ ORDER BY
 				</graphicElement>
 			</rectangle>
 			<staticText>
-				<reportElement x="177" y="0" width="115" height="19" forecolor="#FFFFFF" uuid="e80aebcf-8305-4399-adec-3cafc52e9897">
+				<reportElement x="207" y="0" width="53" height="19" forecolor="#FFFFFF" uuid="e80aebcf-8305-4399-adec-3cafc52e9897">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
-				<text><![CDATA[Correo electrónico:]]></text>
+				<text><![CDATA[E-mail:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="292" y="0" width="140" height="19" forecolor="#FFFFFF" uuid="2df43095-226e-4a6e-9364-8e24c3e0cb29">
+				<reportElement x="260" y="0" width="140" height="19" forecolor="#FFFFFF" uuid="2df43095-226e-4a6e-9364-8e24c3e0cb29">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
@@ -159,7 +159,7 @@ ORDER BY
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
-				<text><![CDATA[Teléfono:]]></text>
+				<text><![CDATA[Phone:]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="501" y="0" width="58" height="19" forecolor="#FFFFFF" uuid="ac3c52c6-724e-4b11-86a9-1be7178b302c">
@@ -190,7 +190,7 @@ ORDER BY
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="11"/>
 				</textElement>
-				<text><![CDATA[ID de identificación:]]></text>
+				<text><![CDATA[ID of identification:]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -218,28 +218,28 @@ ORDER BY
 				<textFieldExpression><![CDATA[$F{edad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="462" y="7" width="74" height="14" uuid="b77d068b-baff-43d5-b8a5-436bb2cca23e"/>
+				<reportElement x="428" y="7" width="107" height="14" uuid="b77d068b-baff-43d5-b8a5-436bb2cca23e"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{pais}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="462" y="37" width="74" height="14" uuid="b0da1b5c-3ef4-41ad-8220-fc9723d23173"/>
+				<reportElement x="428" y="37" width="107" height="14" uuid="b0da1b5c-3ef4-41ad-8220-fc9723d23173"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{estado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="462" y="67" width="74" height="14" uuid="b6bd3583-419b-4be0-94cb-f5c2c66aa5d1"/>
+				<reportElement x="428" y="67" width="107" height="14" uuid="b6bd3583-419b-4be0-94cb-f5c2c66aa5d1"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ciudad}]]></textFieldExpression>
 			</textField>
 			<textField pattern="MMMM d, yyyy h:mm:ss a">
-				<reportElement x="378" y="96" width="158" height="14" uuid="d9cd668d-def4-4f84-9cf5-597e6d7538ce"/>
+				<reportElement x="361" y="96" width="174" height="14" uuid="d9cd668d-def4-4f84-9cf5-597e6d7538ce"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" isItalic="false"/>
 				</textElement>
@@ -257,42 +257,42 @@ ORDER BY
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<text><![CDATA[Nombres:]]></text>
+				<text><![CDATA[Names:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="35" y="67" width="54" height="14" uuid="4a6e9727-1d5b-425f-8e06-acae8a112606"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<text><![CDATA[Edad:]]></text>
+				<text><![CDATA[Age:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="414" y="67" width="48" height="14" uuid="b4289d0e-0273-42ca-a7b0-6fa7648c78c1"/>
+				<reportElement x="380" y="67" width="48" height="14" uuid="b4289d0e-0273-42ca-a7b0-6fa7648c78c1"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<text><![CDATA[Ciudad:]]></text>
+				<text><![CDATA[City:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="414" y="7" width="48" height="14" uuid="99115991-1589-4391-8f05-f82251ad8065"/>
+				<reportElement x="380" y="7" width="48" height="14" uuid="99115991-1589-4391-8f05-f82251ad8065"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<text><![CDATA[País:]]></text>
+				<text><![CDATA[Country:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="414" y="37" width="48" height="14" uuid="6da69a84-f70c-47a1-85e7-69e432596329"/>
+				<reportElement x="380" y="37" width="48" height="14" uuid="6da69a84-f70c-47a1-85e7-69e432596329"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<text><![CDATA[Estado:]]></text>
+				<text><![CDATA[State:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="280" y="96" width="98" height="14" uuid="baa058c7-551c-48ba-ace4-1e2e24310889"/>
+				<reportElement x="285" y="96" width="76" height="14" uuid="baa058c7-551c-48ba-ace4-1e2e24310889"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<text><![CDATA[Fecha de creación:]]></text>
+				<text><![CDATA[Creation Date:]]></text>
 			</staticText>
 			<line>
 				<reportElement x="1" y="118" width="571" height="1" forecolor="#A0D6FA" uuid="14f92c6a-b9a3-471c-81ab-762a5648eb2c">
@@ -309,7 +309,7 @@ ORDER BY
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Página " + $V{PAGE_NUMBER}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
 				<reportElement positionType="FixRelativeToBottom" x="540" y="0" width="32" height="19" uuid="9ff80971-99b0-40a6-9ac6-1049edeb843f">
@@ -318,7 +318,7 @@ ORDER BY
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<textFieldExpression><![CDATA[" de " + $V{PAGE_NUMBER}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[" of " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
