--- a/website/backend/reports/reporteMedicamentos.jrxml
+++ b/website/backend/reports/reporteMedicamentos.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.13.0.final using JasperReports Library version 6.13.0-46ada4d1be8f3c5985fd0b6146f3ed44caed6f05  -->
+<!-- Created with Jaspersoft Studio version 6.14.0.final using JasperReports Library version 6.14.0-2ab0d8625be255bf609c78e1181801213e51db8f  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="medicinasperfil" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="78b9e98b-30c5-42e0-9910-d48ed4c102d2">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Emergencia.id"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -65,7 +65,7 @@ WHERE
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="19"/>
 				</textElement>
-				<text><![CDATA[Reporte de medicamentos]]></text>
+				<text><![CDATA[Medication Report]]></text>
 			</staticText>
 			<textField pattern="MMMMM dd, yyyy">
 				<reportElement x="360" y="53" width="192" height="16" uuid="1197bca1-610d-49a9-8bfb-d13f752e75d2"/>
@@ -91,7 +91,7 @@ WHERE
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="10"/>
 				</textElement>
-				<text><![CDATA[Usuario creador: ]]></text>
+				<text><![CDATA[User creator: ]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="445" y="69" width="116" height="14" uuid="38e2ff07-1202-4d1d-88f9-84628b70de02"/>
@@ -125,7 +125,7 @@ WHERE
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
-				<text><![CDATA[Dosis]]></text>
+				<text><![CDATA[Dose]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="75" y="40" width="270" height="30" forecolor="#FFFFFF" uuid="f72de28e-e632-46d8-b310-97c75ea1107f"/>
@@ -135,17 +135,17 @@ WHERE
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="14"/>
 				</textElement>
-				<text><![CDATA[Medicina]]></text>
+				<text><![CDATA[Medicine]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="10" y="8" width="80" height="20" uuid="3cb6c9da-da62-4e52-8fd2-a30b1d30d810"/>
+				<reportElement x="10" y="8" width="94" height="20" uuid="3cb6c9da-da62-4e52-8fd2-a30b1d30d810"/>
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<text><![CDATA[Información de: ]]></text>
+				<text><![CDATA[Information from: ]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="91" y="8" width="190" height="20" uuid="11c23bb0-3c56-4e12-a754-6782f634ac9a">
+				<reportElement x="104" y="8" width="190" height="20" uuid="11c23bb0-3c56-4e12-a754-6782f634ac9a">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="958cc276-0903-4f2d-a0b9-b6507831c86d"/>
 				</reportElement>
 				<textElement verticalAlignment="Middle">
@@ -208,7 +208,7 @@ WHERE
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Página " + $V{PAGE_NUMBER}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
 				<reportElement positionType="FixRelativeToBottom" x="540" y="0" width="32" height="19" uuid="25288c58-9ade-4080-9d72-689245bcb515">
