--- a/website/backend/reports/reporteUsuariosPrivilegiados.jrxml
+++ b/website/backend/reports/reporteUsuariosPrivilegiados.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.13.0.final using JasperReports Library version 6.13.0-46ada4d1be8f3c5985fd0b6146f3ed44caed6f05  -->
+<!-- Created with Jaspersoft Studio version 6.14.0.final using JasperReports Library version 6.14.0-2ab0d8625be255bf609c78e1181801213e51db8f  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="reporteUsuariosPrivilegiados" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="dd1c72cd-fe01-42e0-a0ba-c102a8eeac9d">
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w1" value="281"/>
 	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="708"/>
@@ -59,7 +59,7 @@ GROUP BY usuario_privilegiado.id_usuario_p, up_tipo_usuario.tipo,  up_tipo_usuar
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans" size="13"/>
 					</textElement>
-					<text><![CDATA[Nombre del usuario]]></text>
+					<text><![CDATA[User name]]></text>
 				</staticText>
 				<staticText>
 					<reportElement x="326" y="32" width="131" height="29" forecolor="#FFFFFF" uuid="053114c5-e7d1-4207-bd78-6f5c316469c9"/>
@@ -69,7 +69,7 @@ GROUP BY usuario_privilegiado.id_usuario_p, up_tipo_usuario.tipo,  up_tipo_usuar
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans" size="13"/>
 					</textElement>
-					<text><![CDATA[Correo]]></text>
+					<text><![CDATA[Email]]></text>
 				</staticText>
 				<staticText>
 					<reportElement x="474" y="32" width="81" height="29" forecolor="#FFFFFF" uuid="57945cfc-e772-4c61-896f-e876cee61afd"/>
@@ -79,7 +79,7 @@ GROUP BY usuario_privilegiado.id_usuario_p, up_tipo_usuario.tipo,  up_tipo_usuar
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font fontName="DejaVu Sans" size="13"/>
 					</textElement>
-					<text><![CDATA[Telefono]]></text>
+					<text><![CDATA[Phone]]></text>
 				</staticText>
 				<rectangle>
 					<reportElement x="0" y="0" width="572" height="19" forecolor="rgba(0, 0, 0, 0.0)" backcolor="#A0D6FA" uuid="885346cc-3a36-4e7e-b52c-b699bf3be66c"/>
@@ -108,8 +108,7 @@ GROUP BY usuario_privilegiado.id_usuario_p, up_tipo_usuario.tipo,  up_tipo_usuar
 				<textElement>
 					<font fontName="DejaVu Sans" size="19"/>
 				</textElement>
-				<text><![CDATA[Reporte de usuarios
-privilegiados]]></text>
+				<text><![CDATA[Report of privileged users]]></text>
 			</staticText>
 			<textField pattern="MMMMM dd, yyyy">
 				<reportElement x="361" y="53" width="196" height="16" uuid="d11f75c5-eed0-453e-9d77-6e2e15275d0d"/>
@@ -135,7 +134,7 @@ privilegiados]]></text>
 				<textElement>
 					<font fontName="DejaVu Sans" size="10"/>
 				</textElement>
-				<text><![CDATA[Usuario creador: ]]></text>
+				<text><![CDATA[User creator: ]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="446" y="69" width="126" height="14" uuid="10937a75-2d5a-400e-83b3-3b8f0ec183a6"/>
@@ -197,7 +196,7 @@ privilegiados]]></text>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Página " + $V{PAGE_NUMBER}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
 				<reportElement positionType="FixRelativeToBottom" x="540" y="0" width="32" height="19" uuid="90558ea7-7356-48ff-ae74-df0a7782b779">
